--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,13 @@
 .App {
   text-align: center;
-  background-color: #282c34;
+  background-color:;
 }
+
+
+/* * {
+  background-color: #282c34;
+
+} */
 
 /* .App-logo {
   height: 40vmin;
